--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ./terraform
+        working-directory: .github/workflows/terraform
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
-        working-directory: ./terraform
+        working-directory: .github/workflows/terraform
