--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,36 +1,49 @@
 name: 'Terraform'
 
 on:
-  #
-  # Allows deployment to be invoked manually through the GitHub Actions user interface.
-  #
+  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    paths:
+      - 'terraform/*.tf'
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # define one job for the workflow
 jobs:
 
   # define the os for the job to run on
-  deploy:
+  terraform:
+    name: 'Terraform'
     runs-on: ubuntu-latest
 
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE.
-      - uses: actions/checkout@v3
+    env:
+      ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      # Expands the configuration template and deploys the microservice.
-      - name: Deploy
-        run: ./scripts/deploy.sh
+    steps:
+      - uses: actions/checkout@v3
 
       # Install the preferred version of Terraform CLI
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2.0.3
-        with:
-          terraform_version: 1.6.6
 
       - name: Terraform Init
-        run: terraform init
-        working-directory: ./terraform
+         id: init
+        run: |
+          cd terraform
+          terraform init  
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-        working-directory: ./terraform
+      - name: Terraform plan
+        id: plan
+        run: |
+          cd terraform
+          terraform plan
+
+      - name: Terraform apply
+        id: apply
+        run: |
+          cd terraform
+          terraform apply -auto-approve
