--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,10 +18,10 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
-      ARM_TENANT_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_TENANT_ID }}
+      ARM_TENANT_ID: ${{ secrets.MVP_SUBSCRIPTION }}
 
     steps:
       - uses: actions/checkout@v3
@@ -31,19 +31,16 @@ jobs:
         uses: hashicorp/setup-terraform@v2.0.3
 
       - name: Terraform Init
-         id: init
         run: |
           cd terraform
           terraform init  
 
       - name: Terraform plan
-        id: plan
         run: |
           cd terraform
           terraform plan
 
       - name: Terraform apply
-        id: apply
         run: |
           cd terraform
           terraform apply -auto-approve
