--- a/.github/workflows/delete.yaml
+++ b/.github/workflows/delete.yaml
@@ -40,6 +40,10 @@ jobs:
         with:
           base64-kube-config: ${{ secrets.KUBE_CONFIG }}
           kubectl-version: v1.24.2
+
+      # Make delete script executable
+      - name: Make push image script executable
+        run: chmod +x ./scripts/delete.sh
       
       #
       # Expands the configuration template and deploys the microservice.
