--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,27 +21,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # Set up Terraform and initialize
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2.0.3
-
-      - name: Terraform Init
-        run: |
-          cd terraform
-          terraform init  
-
-      - name: Terraform Plan
-        run: |
-          cd terraform
-          terraform plan -refresh=false
-        timeout-minutes: 30
-
-      - name: Terraform Apply
-        run: |
-          cd terraform
-          terraform apply -auto-approve
-        timeout-minutes: 30
-
       # Login to Azure
       - name: Azure Login
         uses: azure/login@v1
@@ -49,6 +28,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       # Fetch ACR credentials dynamically
       - name: Get ACR Credentials
