--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,10 +6,6 @@ on:
       - 'terraform/*.tf'
   workflow_dispatch:
 
-permissions:
-  id-token: write  # Required for OIDC authentication
-  contents: read
-
 jobs:
   terraform:
     name: 'Terraform + Deploy to AKS'
@@ -27,12 +23,10 @@ jobs:
 
       # Login to Azure
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-          subscription-id: ${{ secrets.MVP_SUBSCRIPTION }}
+          creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.MVP_SUBSCRIPTION }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
+
 
       # Fetch ACR credentials dynamically
       - name: Get ACR Credentials
