execute terraform workflow

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,12 +21,31 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+       - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2.0.3
+
+      - name: Terraform Init
+        run: |
+          cd terraform
+          terraform init  
+
+      - name: Terraform Plan
+        run: |
+          cd terraform
+          terraform plan -refresh=false
+        timeout-minutes: 30
+
+      - name: Terraform Apply
+        run: |
+          cd terraform
+          terraform apply -auto-approve
+        timeout-minutes: 30
+
       # Login to Azure
       - name: Azure Login
         uses: azure/login@v2
         with:
           creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.MVP_SUBSCRIPTION }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
-
 
       # Fetch ACR credentials dynamically
       - name: Get ACR Credentials
